Add new commands and features for PvP factions
Implement new commands such as /bounty, /kit, /topkills, and /killstreak, alongside faction customization options like tags and MOTD.

Replit-Commit-Author: Agent
Replit-Commit-Session-Id: 1e14c770-07c0-45bd-b3e9-5f6635dc5711
Replit-Commit-Checkpoint-Type: full_checkpoint
Replit-Commit-Event-Id: e03a7011-4ca5-4c20-84b8-d304051fd735
Replit-Helium-Checkpoint-Created: true